# OGX-Wireless-ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults
components/patches/: README.md
main/: CMakeLists.txt  board_config.h  bp32_task.cpp  bp32_task.h  gpio_task.cpp  gpio_task.h  i2c_task.cpp  i2c_task.h  main.c  shared.h  tasks.h
main/ble_server/: ble_server.cpp
main/user_settings/: nvs_helpers.cpp  nvs_helpers.h  user_settings.cpp  user_settings.h  user_settings_c.h
main/utilities/: scaling.cpp  scaling.h
